[airflow-sqlite] Add image pull secrets
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/airflow-sqlite/templates/deployment.yml
+++ b/charts/airflow-sqlite/templates/deployment.yml
@@ -24,6 +24,12 @@ spec:
         component: all
         airflow-redis-client: "false"
     spec:
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       serviceAccountName: {{ .Release.Name }}
       initContainers:
         - name: "init"
