[aws-login] Add image pull secrets
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/aws-login/templates/deployment.yaml
+++ b/charts/aws-login/templates/deployment.yaml
@@ -19,6 +19,12 @@ spec:
         app: {{ template "aws-login.name" . }}
         release: {{ .Release.Name }}
     spec:
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
