[bucket-archiver] Adds image pull policy
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/buckets-archiver/templates/cronjob.yaml
+++ b/charts/buckets-archiver/templates/cronjob.yaml
@@ -19,10 +19,16 @@ spec:
           labels:
             app: {{ .Release.Name }}
         spec:
+          {{- with .Values.image.pullSecrets }}
+          imagePullSecrets:
+          {{- range . }}
+            - name: {{ . }}
+          {{- end }}
+          {{- end }}
           serviceAccountName: {{ .Release.Name }}
           containers:
             - name: {{ .Release.Name }}
-              image: "{{ .Values.image }}"
+              image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
               args:
                 - "archive"
               env:
