[calicoctl] Add image pull secrets
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/calicoctl/templates/pod.yaml
+++ b/charts/calicoctl/templates/pod.yaml
@@ -9,6 +9,12 @@ metadata:
   name: calicoctl
   namespace: kube-system
 spec:
+  {{- with .Values.image.pullSecrets }}
+  imagePullSecrets:
+  {{- range . }}
+    - name: {{ . }}
+  {{- end }}
+  {{- end }}
   hostNetwork: true
   containers:
   - name: calicoctl
