concourse 1.10.0: Add image pull secrets
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/concourse/charts/postgresql/templates/deployment.yaml
+++ b/charts/concourse/charts/postgresql/templates/deployment.yaml
@@ -25,6 +25,12 @@ spec:
       tolerations:
 {{ toYaml .Values.tolerations | indent 8 }}
       {{- end }}
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
       - name: {{ template "postgresql.fullname" . }}
         image: "{{ .Values.image }}:{{ .Values.imageTag }}"
