--- a/charts/concourse/charts/postgresql/values.yaml
+++ b/charts/concourse/charts/postgresql/values.yaml
@@ -5,6 +5,9 @@ image: "postgres"
 ##
 imageTag: "9.6.2"
 
+# Secret names with credentials for container registry authentication
+imagePullSecrets: []
+
 ## Specify a imagePullPolicy
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
