--- a/charts/init-user/templates/create-user-home-job.yml
+++ b/charts/init-user/templates/create-user-home-job.yml
@@ -10,6 +10,12 @@ spec:
     metadata:
       name: create-user-home
     spec:
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
       - name: ubuntu
         image: ubuntu:16.04
