[logstash] Adds optional image pull secrets
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/logstash/templates/deployment.yaml
+++ b/charts/logstash/templates/deployment.yaml
@@ -20,6 +20,12 @@ spec:
         release: {{ .Release.Name }}
     spec:
       serviceAccountName: {{ .Release.Name }}
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
