[prometheus-resources] Add optional image pull secrets
Adds the ability to specify image pullSecrets for container authentication

--- a/charts/prometheus-resources/templates/deployment.yaml
+++ b/charts/prometheus-resources/templates/deployment.yaml
@@ -27,6 +27,12 @@ spec:
         target: {{ .name }}
     spec:
       serviceAccountName: {{ $.Release.Name }}-{{ .name }}
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
         - name: {{ $name }}
           image: {{ $.Values.authProxy.image }}:{{ $.Values.authProxy.tag }}
