[jupyter-lab] Add optional image pull secrets
Adds image pull secrets so images can be pulled from Docker Hub with authenticatio

--- a/charts/jupyter-lab/templates/deployment.yaml
+++ b/charts/jupyter-lab/templates/deployment.yaml
@@ -29,6 +29,12 @@ spec:
     spec:
       priorityClassName: {{ .Chart.Name }}
       serviceAccountName: {{ .Values.Username }}-jupyter
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}-auth-proxy
           image: {{ .Values.authProxy.image }}:{{ .Values.authProxy.tag }}
