rest-user-home 0.4.3: Fix job failing because of semicolons
This was causing the job to mysteriously fail.

Also:
- bumped patch number in version and updated Changelog (also with details
  about previous changes to chart)
- renamed `deployment.yaml` template file to `job.yaml` as this contains
  a kubernetes `Job` resource (not a `Deployment`)

--- a/charts/reset-user-home/templates/job.yaml
+++ b/charts/reset-user-home/templates/job.yaml
@@ -18,13 +18,13 @@ spec:
             - /bin/sh
             - -c
             - |
-              rm -rf /home/{{ .Values.Username }}/.rstudio.bak; &&
-              rm -rf /home/{{ .Values.Username }}/.rstudio; &&
-              rm -rf /home/{{ .Values.Username }}/.conda.bak/; &&
-              rm -rf /home/{{ .Values.Username }}/.conda/; &&
-              rm -rf /home/{{ .Values.Username }}/.condarc.bak; &&
-              rm -rf /home/{{ .Values.Username }}/.condarc;  &&
-              rm -rf /home/{{ .Values.Username }}/R/library/*;
+              rm -rf /home/{{ .Values.Username }}/.rstudio.bak &&
+              rm -rf /home/{{ .Values.Username }}/.rstudio &&
+              rm -rf /home/{{ .Values.Username }}/.conda.bak/ &&
+              rm -rf /home/{{ .Values.Username }}/.conda/ &&
+              rm -rf /home/{{ .Values.Username }}/.condarc.bak &&
+              rm -rf /home/{{ .Values.Username }}/.condarc &&
+              rm -rf /home/{{ .Values.Username }}/R/library/*
       volumes:
         - name: home
           persistentVolumeClaim:
