--- a/charts/concourse-org-pipeline/templates/job.yaml
+++ b/charts/concourse-org-pipeline/templates/job.yaml
@@ -14,6 +14,12 @@ spec:
     metadata:
       name: set-pipeline
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       containers:
       - name: set-pipeline
         image: appropriate/curl:3.1
