cpanel 3.1.0: Support for `imagePullSecrets`
This is to authenticate with container registry when pulling docker images.

NOTE: The only image used by this chart which is hosted in public DockerHub
at the moment is the reverse proxy one (`nginxinc/nginx-unprivileged:1.16.0-alpine`)

--- a/charts/cpanel/templates/frontend-deployment.yaml
+++ b/charts/cpanel/templates/frontend-deployment.yaml
@@ -26,6 +26,12 @@ spec:
         name: nginxconf
       - emptyDir: {}
         name: staticfiles
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range . }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
       initContainers:
       - name: init-nginx
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
