--- a/charts/init-user/templates/create-user-home-job.yml
+++ b/charts/init-user/templates/create-user-home-job.yml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: ubuntu
-        image: ubuntu:16.04
+        image: {{ .Values.ubuntu.image }}
         command: ["/bin/sh", "-c",
           "useradd -u 1001 -g staff -m -d /homes/{{ .Values.Username }} {{ .Values.Username }}"]
         volumeMounts:
