nfs-backup 1.0.0: Pull awscli image from (private) AWS ECR repository
This is why we bumped the major version number: Technically this is a
breaking change if anyone outside our team/cluster is installing this
and it doesn't override the `Image.Repository` value.

--- a/charts/nfs-backup/values.yaml
+++ b/charts/nfs-backup/values.yaml
@@ -3,7 +3,7 @@ AWS:
   S3:
     BucketName: "alpha-moj-analytics-nfs-backup"
 Image:
-  Repository: amazon/aws-cli
+  Repository: 593291632749.dkr.ecr.eu-west-1.amazonaws.com/awscli
   Tag: 2.0.31
   PullPolicy: IfNotPresent
 Schedule: "@daily"
