jupyter-lab 1.0.0: Spark image is now default
Why?
----
- use `allspark` flavour of JupyterLab image means more users can use Spark
  when needed
- move a user to `allspark` flavour is currently a manual and error-prone
  process (although documented in our [wiki])
- reduced fragementation and potential retirement of one of the current three
  flavours of JupyterLab images

Potential drawbacks
-------------------
- image sizes concerns seem to not be a problem especially after updating
  `allspark`'s BASE image. `allspark-notebook:v1.1.0` is ~2.7GB which is
  smaller than `datascience-notebook:v0.6.9` previosly used which
  was ~4.4GB
- above would be mitigated anyway by the fact this Docker image is now
  pulled from the AWS ECR registry and not quay.io which should be faster
- potential unexpected breaking changes caused by a different Docker image.
  This is always a risk even when updating the same Docker image but we
  can do some manual test and hopefully this image would work mostly in the
  same manner as `datascience` one

Resources
---------
- [Robin L. comment] explaining `allspark` image entrypoint/command
  differences
- [wiki] with instructions on how to manually deploy `allspark` flabour
  of JupyterLab

[Robin L. comment]: https://github.com/ministryofjustice/analytics-platform-jupyter-notebook/pull/24#issuecomment-603248428
[wiki]: https://github.com/ministryofjustice/analytics-platform/wiki/Deploying-jupyterlab#spark-version

--- a/charts/jupyter-lab/templates/deployment.yaml
+++ b/charts/jupyter-lab/templates/deployment.yaml
@@ -93,11 +93,13 @@ spec:
             - name: jupyter
               containerPort: {{ .Values.jupyter.containerPort }}
           command:
-            - "start.sh"
+            - "start-notebook.sh"
           args:
-            - "jupyter lab"
             - "--NotebookApp.token=''"
             - --ContentsManager.allow_hidden=True
+          env:
+            - name: JUPYTER_ENABLE_LAB
+              value: "1"
           readinessProbe:
             httpGet:
               path: /
