--- a/charts/jupyter-lab/Chart.yaml
+++ b/charts/jupyter-lab/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 description: Jupyter Lab with Auth0 authentication proxy
 name: jupyter-lab
-version: 0.5.4
-appVersion: v0.6.7
+version: 1.0.0
+appVersion: "JupyterLab: 2.2.9, Python: 3.8.6"
