--- a/.github/workflows/charts-lint-test.yaml
+++ b/.github/workflows/charts-lint-test.yaml
@@ -47,6 +47,26 @@ jobs:
         run: ct lint --config .github/ct.yaml --excluded-charts ""
         if: steps.list-changed.outputs.changed == 'true' || steps.list-changed.outputs.common == 'true'
 
+      - name: Output
+        id: chart-testing-output
+        if: steps.list-changed.outputs.changed == 'true' || steps.list-changed.outputs.common == 'true'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `
+            #### Chart Testing Output 🖌\`${{ steps.lint.outcome }}\`
+
+            **Pusher**: @${{ github.actor }}
+            **Action**: ${{ github.event_name }}
+            `;
+
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+
   unittest:
     runs-on: ubuntu-latest
     needs: lint
